package pt.ipp.isep.dei.esoft.project.application.controller;
import pt.ipp.isep.dei.esoft.project.domain.*;
import pt.ipp.isep.dei.esoft.project.repository.GreenSpaceRepository;
import pt.ipp.isep.dei.esoft.project.repository.Repositories;
import java.util.ArrayList;
import java.util.List;
public class GreenSpaceController {
//    private Repositories repositories;
//
//    public RegisterGreenSpaceController() {
//        this.repositories = Repositories.getInstance();
//    }
//
//    public List<String> getGreenSpaceTypeList() {
//        GreenSpaceTypeRepository greenSpaceTypeRepo = repositories.getGreenSpaceTypeRepository();
//        return greenSpaceTypeRepo.getGreenSpaceTypeList();
//    }
//
//    public boolean registerGreenSpace(String name, int location, double area) {
//        GreenSpaceRepository greenSpaceRepo = repositories.getGreenSpaceRepository();
//        GreenSpace greenSpace = new GreenSpace(name, location, area);
//        return greenSpaceRepo.registerGreenSpace(greenSpace);
//    }
}