package pt.ipp.isep.dei.esoft.project.ui.console.menu;

public class GreenSpaceUI {
}
