@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction


class GreenSpaceUI {
}


class GreenSpaceController {
+ listAll()  : List<GreenSpace>
+ retrieveManagedGreenSpaces()
}
class GreenSpaceRepository {
+ listAll() : List<GreenSpace>
+ getManagedGreenSpaces()
}

GreenSpaceUI --> GreenSpaceController
GreenSpaceController --> GreenSpaceRepository

@enduml